# sempr-python

./: .gitignore  CMakeLists.txt  README.md  setup.py
src/: components.cpp  core.cpp  module.cpp  rete.cpp
test/: test.py  test_inference.py
